# bbTalkie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  bbTalkie.code-workspace  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
esp-idf/components/hardware_driver/: Kconfig.projbuild  Kconfig.projbuild.new
esp-idf/src/: README_MODULES.md  README_VSCODE.md  sdkconfig.defaults.esp32s3
esp-idf/src/docs/features/: 01_walkie_talkie.md  02_echo_cancellation.md  03_esp_now_radio.md  04_audio_codec_playback.md  05_voice_command.md  06_display_animation.md  07_button_power.md  08_led_status.md  09_configuration_build.md  README.md
esp-idf/src/main/: CMakeLists.txt  app_state.c  bb_animation.c  bb_audio.c  bb_button.c  bb_display.c  bb_led.c  bb_power.c  bb_radio.c  main.c
esp-idf/src/main/include/: agc.h  animation.h  app_config.h  app_state.h  bb_audio.h  bb_button.h  bb_display.h  bb_power.h  bb_radio.h  command_map.h  led.h
